<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Haoli</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="action_add">Add</string>
	<string name="dialog_message">dialog_message</string>
	<string name="dialog_title">Add</string>
	<string name="dialog_add_price_hint">Price</string>
	<string name="dialog_add_time_hint">Time</string>
	<string name="dialog_add_purpose_hint">Purpose</string>
	<string name="dialog_add_way_hint">Way</string>
	<string name="action_refresh">Refresh</string>
	<string name="desc">desc</string>
	<string name="items_time">time</string>
	<string name="items_purpose">purpose</string>
	<string name="items_price">price</string>
	
	<string name="time">Time</string>
	<string name="price">Price</string>
	<string name="purpose">Purpose</string>
	<string name="way">Way</string>
	<string name="cash">Cash</string>
	<string name="card">Card</string>
	<string name="alipay">Alipay</string>
	<string name="borrow">Borrow</string>
</resources>
