<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/dialog_add_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="number" 
 		android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:imeOptions="actionNext"
        android:hint="@string/dialog_add_time_hint"
    />
    
    <EditText
        android:id="@+id/dialog_add_price"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="numberDecimal" 
 		android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:imeOptions="actionNext"
        android:hint="@string/dialog_add_price_hint">
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/dialog_add_purpose"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
 		android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:imeOptions="actionNext"
        android:hint="@string/dialog_add_purpose_hint"
    />
     
    <EditText
        android:id="@+id/dialog_add_way"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
 		android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:imeOptions="actionDone"
        android:hint="@string/dialog_add_way_hint"
    />

</LinearLayout>
