<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="4dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/edit_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="2014/10/06"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/edit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="4dp"         
            android:layout_gravity="right"
            android:text="22:25" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="4dp"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/edit_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="4dp"
            android:gravity="right"
            android:text="0.00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
       		android:layout_marginRight="16dp"
       		android:layout_marginBottom="4dp"
            android:text="@string/purpose"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ListView
        android:id="@+id/list_purpose"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp" >
	</ListView>
    
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
       		android:layout_marginRight="16dp"
            android:text="@string/way"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    

	<RadioGroup
	    android:id="@+id/ways_group"
	 	android:layout_width="fill_parent"
	 	android:layout_height="wrap_content"
	 	android:layout_marginLeft="16dp"
	 	android:layout_marginTop="4dp"
	 	android:layout_marginBottom="16dp"
	 	android:layout_marginRight="16dp"
	 	android:orientation="horizontal">
        
		<!--<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginLeft="0dp"
		    android:layout_marginRight="0dp"> -->
		    
		<RadioButton
		     android:id="@+id/radioButton_cash"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_marginLeft="0dp"
			 android:layout_marginRight="4dp"
		     android:text="@string/cash" />
		
		
		<RadioButton
		     android:id="@+id/radioButton_card"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_marginLeft="4dp"
			 android:layout_marginRight="4dp"
		     android:text="@string/card" />
		
		 <RadioButton
		     android:id="@+id/radioButton_alipay"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_marginLeft="4dp"
			 android:layout_marginRight="4dp"
		     android:text="@string/alipay"/>
		 <!--  </LinearLayout>-->
		 
		 <RadioButton
		     android:id="@+id/radioButton_borrow"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_marginLeft="4dp"
			 android:layout_marginRight="0dp"
		     android:text="@string/borrow" />
	 </RadioGroup>
</LinearLayout>